--- a/index2.html
+++ b/index2.html
@@ -77,5 +77,6 @@
 		<input type="submit" name="送信">
 	</form>
  <a href="index3.html" title="index3に飛びます">index3</a>
+ <img src="top.png">
 </body>
 </html>
