--- a/index2.html
+++ b/index2.html
@@ -1,82 +1,90 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-	<meta charset="utf-8">
-	<title>調査用紙</title>
-	<style type="text/css"></style>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Progate</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-	<form method="post" action="#">
-		<h3>回答者情報</h3>
-		<fieldset>
-			<legend>学生番号と氏名</legend>
-			<label for="number">学生番号</label> <input type="text" name="number" id="number"><br>
-			<label for="name">氏名</label> <input type="text" name="name" id="name">
-		</fieldset>
-		<br>
-		<fieldset>
-			<legend>所属学科と学年</legend>
-			<select>
-				<optgroup label="教養学部">
-					<option value="人間科学科">人間科学科</option>
-					<option value="地域構想学科">地域構想学科</option>
-					<option value="情報科学科">情報科学科</option>
-					<option value="言語文化学科">言語文化学科</option>
-				</optgroup>
-				<optgroup label="文学部">
-					<option value="英文学科">英文学科</option>
-					<option value="総合人文学科">総合人文学科</option>
-					<option value="歴史学科">歴史学科</option>
-					<option value="教育学科">教育学科</option>
-				</optgroup>
-				<optgroup label="経済学部">
-					<option value="経済学科">経済学科</option>
-					<option value="共生社会経済学科">共生社会経済学科</option>
-				</optgroup>
-				<optgroup label="経営学部">
-					<option value="経営学科">経営学科</option>
-				</optgroup>
-				<optgroup label="法学部">
-					<option value="法律学科">法律学科</option>
-				</optgroup>
-				<optgroup label="工学部">
-					<option value="機械知能工学科">機械知能工学科</option>
-					<option value="電気電子工学科">電気電子工学科</option>
-					<option value="環境建設工学科">環境建設工学科</option>
-					<option value="情報基盤工学科">情報基盤工学科</option>
-				</optgroup>
-			</select><br>
-			<select>
-			  <optgroup label="学年">
-			    <option value="1">1</option>
-			    <option value="2">2</option>
-			    <option value="3">3</option>
-			    <option value="4">4</option>
-			  </optgroup>
-			</select>
-		</fieldset>
-		<br>
-		<fieldset>
-			<legend>性別</legend>
-			<input type="radio" name="gender" value="male" id="male"><label for="male">男性</label><br>
-			<input type="radio" name="gender" value="female" id="female"><label for="female">女性</label>
-		</fieldset>
-		<br>
-		<h3>質問文</h3>
-		<br>
-		<fieldset>
-			普段、家にいて飲むことが多い飲み物はなんですか？(複数選択可)<br>その他の場合は具体的に記載してください。<br>
-			<input type="checkbox" name="drink" value="水" id="水"><label for="水">水</label><br>
-			<input type="checkbox" name="drink" value="お茶" id="お茶"><label for="お茶">お茶</label><br>
-			<input type="checkbox" name="drink" value="炭酸飲料" id="炭酸飲料"><label for="炭酸飲料">炭酸飲料</label><br>
-			<input type="checkbox" name="drink" value="スポーツドリンク" id="スポーツドリンク"><label for="スポーツドリンク">スポーツドリンク</label><br>
-			 <input type="checkbox" name="drink" value="その他" id="その他"><label for="その他">その他</label> <input type="text" name="drink" id="その他">
-		</fieldset>
-		<br>
-		<br>
-		<input type="submit" name="送信">
-	</form>
- <a href="index3.html" title="index3に飛びます">index3</a>
- <img src="top.png">
+  <header>
+    <div class="container">
+      <div class="header-left">
+        <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
+      </div>
+      <span class="fa fa-bars menu-icon"></span>
+      <div class="header-right">
+        <a href="#">レッスン</a>
+        <a href="#">新規登録</a>
+        <a href="#" class="login">ログイン</a>
+      </div>
+    </div>
+  </header>
+  <div class="top-wrapper">
+    <div class="container">
+      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
+      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <div class="btn-wrapper">
+        <a href="#" class="btn signup">新規登録はこちら</a>
+        <p>or</p>
+        <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Facebookで登録</a>
+        <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Twitterで登録</a>
+      </div>
+    </div>
+  </div>
+  <div class="lesson-wrapper">
+    <div class="container">
+      <div class="heading">
+        <h2>Learn Where to Get Started!</h2>
+      </div>
+      <div class="lessons">
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="https://prog-8.com/images/html/advanced/html.png">
+            <p>HTML & CSS</p>
+          </div>
+          <p class="text-contents">ウェブページの作成に使用される言語です。HTMLとCSSを組み合わせることで、静的なページを作り上げることができます。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="https://prog-8.com/images/html/advanced/jQuery.png">
+            <p>jQuery</p>
+          </div>
+          <p class="text-contents">素敵な動きを手軽に実装できるJavaScriptライブラリです。 アニメーション効果をつけたり、Ajax（エイジャックス）を使って外部ファイルを読み込んだりと色々なことができます。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="https://prog-8.com/images/html/advanced/ruby.png">
+            <p>Ruby</p>
+          </div>
+          <p class="text-contents">オープンソースの動的なプログラミング言語で、 シンプルさと高い生産性を備えています。大きなWebアプリケーションから小さな日用ツールまで、さまざまなソフトウェアを作ることができます。</p>
+        </div>
+        <div class="lesson">
+          <div class="lesson-icon">
+            <img src="https://prog-8.com/images/html/advanced/php.png">
+            <p>PHP</p>
+          </div>
+          <p class="text-contents">HTMLだけではページの内容を変えることはできません。PHPはHTMLにプログラムを埋め込み、それを可能にします。</p>
+        </div>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+  <div class="message-wrapper">
+    <div class="container">
+      <div class="heading">
+        <h2>さぁ、あなたもProgateでプログラミングを学んでみませんか?</h2>
+        <h3>Let's learn to code, learn to be creative!</h3>
+      </div>
+      <span class="btn message">さっそく開発する</span>
+    </div>
+  </div>
+  <footer>
+    <div class="container">
+      <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
+      <p>Learn to Code, Learn to be Creative.</p>
+    </div>
+  </footer>
 </body>
 </html>
